hphp/test/slow/parser/hh-reserved-name-integer-1.php.expectf
Fatal error: Cannot use 'Integer' as class name as it is reserved in %s on line 3
